test/scc_test/stmt/semantic-errors/017.t
void test()
{
    char* a;
    switch(a)
        ;
}